# AuroraAICompiler

./: .gitignore  BACKLOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  matmul_test_output.mlir  standalone_matmul_bias_example.cpp  test_after_fusion.mlir  test_before_fusion.mlir  test_matmul_bias.mlir  test_model.mlir
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  benchmark_resnet.py
docs/: aurora_compiler_walkthrough.md  dialect.md
examples/: README.md  compile_resnet.py  lower_to_linalg.mlir  matmul_bias_fusion.mlir  pipeline_to_llvm.mlir
include/: CMakeLists.txt
include/Aurora/: CMakeLists.txt
include/Aurora/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/Aurora/Conversion/AuroraToLLVM/: AuroraToLLVM.h  CMakeLists.txt
include/Aurora/Dialect/: CMakeLists.txt
include/Aurora/Dialect/Aurora/: AuroraDialect.h  AuroraDialect.td  AuroraOps.h  AuroraOps.td  CMakeLists.txt
include/Aurora/Runtime/: AuroraRuntime.h  CMakeLists.txt
include/Aurora/Transforms/: CMakeLists.txt  Fusion.h  MatMulBiasFusion.h  Passes.h  Passes.td
models/: README.md  create_simple_model.py  create_test_model.py  matmul_test.onnx  mnist.onnx  mobilenetv2.onnx  resnet18.onnx  simple_benchmark.py  standalone_test.py
python/: CMakeLists.txt  setup.py
python/aurora/: __init__.py  compiler.py
python/aurora/model_import/: __init__.py  example_usage.py  onnx_importer.py  onnx_loader.py  onnx_to_mlir.py  pytorch_importer.py
python/aurora/runtime/: __init__.py  model.py
scripts/: aurora-to-obj.sh  download_models.py
src/: CMakeLists.txt
src/Codegen/: CMakeLists.txt
src/Conversion/: CMakeLists.txt
src/Conversion/AuroraToLLVM/: AuroraToLLVM.cpp
src/Conversion/AuroraToLinalg/: AuroraToLinalg.cpp  CMakeLists.txt
src/Dialect/Aurora/: AuroraDialect.cpp  AuroraDialectRegistration.cpp  AuroraOps.cpp  CMakeLists.txt
src/Parser/: CMakeLists.txt
src/Runtime/: AuroraRuntime.cpp  CMakeLists.txt
src/Transforms/: CMakeLists.txt  Fusion.cpp  MatMulBiasFusion.cpp
tasks/: todo.md
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Conversion/: aurora-bufferize.mlir  aurora-to-linalg-add.mlir  aurora-to-linalg-bias-add.mlir  aurora-to-linalg-matmul-bias.mlir  aurora-to-linalg-matmul.mlir  aurora-to-linalg-relu.mlir  aurora-to-llvm.mlir  fusion-then-lower.mlir
test/Dialect/Aurora/: invalid-bias-dim.mlir  invalid.mlir  ops.mlir
test/Transforms/: matmul-bias-fusion-negative.mlir  matmul-bias-fusion.mlir
test/end_to_end/: CMakeLists.txt
test/integration/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/dialect/: CMakeLists.txt  TestAuroraDialect.cpp
test/unit/transforms/: CMakeLists.txt  TestMatMulBiasFusion.cpp
tools/: CMakeLists.txt  standalone-fusion-demo.cpp
tools/aurora-benchmark/: CMakeLists.txt  aurora-benchmark.cpp
tools/aurora-compile/: CMakeLists.txt  aurora-compile-backend.cpp  aurora-compile-backend.h  aurora-compile.cpp
tools/aurora-jit/: CMakeLists.txt  jit_executor.cpp  sample_inputs.json
tools/aurora-opt/: CMakeLists.txt  aurora-opt.cpp
tools/aurora-run/: CMakeLists.txt  aurora-run.cpp
